[package]
name = "tower-breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-service = "0.3"
tokio = { version = "1", features = ["time"] }
tracing = { version = "0.1.36", default-features = false }
pin-project-lite = "0.2.9"